<resources>
    <string name="app_name">PhoneShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ecommerce_splash_title">Ecommerce \n Concept</string>
    <string name="ellipse">ellipse</string>
    <string name="title_location">Zihuatanejo, Gro</string>
    <string name="select_categories">Select Category</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="see_more">see more</string>
    <string name="buy_now">Buy now!</string>
    <string name="done">Done</string>
    <string name="filter_options">Filter Options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="product_details">Product Details</string>
    <string name="exynos_990">Exynos 990</string>
    <string name="_108_12_mp">108 + 12 mp</string>
    <string name="_8_gb">8 GB</string>
    <string name="_256_gb">256 GB</string>
    <string name="galaxy_note_20_ultra">Galaxy Note 20 Ultra</string>
    <string name="_128_gb">128 GB</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_1_500_00">$1,500.00</string>
    <string name="my_cart">My Cart</string>
    <string name="add_address">Add address</string>
    <string name="total">Total</string>
    <string name="_6_000_us">$6,000 us</string>
    <string name="delivery">Delivery</string>
    <string name="free">Free</string>
    <string name="checkout">Checkout</string>
    <string name="_3_000_00">$3,000.00</string>
</resources>