<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.product_filter.ProductFilterFragment">

    <ImageView
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/exit"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_exit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/textFilterOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/filter_options"
        android:textColor="@color/second"
        app:layout_constraintStart_toEndOf="@id/exitButton"
        app:layout_constraintEnd_toStartOf="@id/doneButton"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/done"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/white"
        android:background="@drawable/rounded_done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/textBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/brand"
        android:textColor="@color/second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFilterOptions"
        android:padding="12dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>