<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".presentation.view.detail.DetailsFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:background="@drawable/rounded_exit_button"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        android:src="@drawable/image_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textProductDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:fontFamily="@font/marc_pro"
        android:padding="12dp"
        android:text="@string/product_details"
        android:textColor="@color/second"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/shopButton"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:background="@drawable/rounded_done_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="12dp"
        android:src="@drawable/shopping_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerProductImages"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:paddingHorizontal="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textProductDetails" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_layout"
        android:elevation="12dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPagerProductImages">

        <TextView
            android:id="@+id/titleProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/marc_pro"
            android:text="@string/galaxy_note_20_ultra"
            android:textColor="@color/second"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_exit_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="15dp"
            android:paddingVertical="12dp"
            android:src="@drawable/health_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ratioLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleProduct">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/star" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratioLayout"
            app:tabIndicatorColor="@color/main"
            tools:layout_editor_absoluteY="12dp" />

        <LinearLayout
            android:id="@+id/featuresLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:src="@drawable/cpu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/marc_pro"
                    android:text="@string/exynos_990" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:src="@drawable/camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/marc_pro"
                    android:text="@string/_108_12_mp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/marc_pro"
                    android:src="@drawable/ram" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/marc_pro"
                    android:text="@string/_8_gb" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/marc_pro"
                    android:src="@drawable/storage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/marc_pro"
                    android:text="@string/_256_gb" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/selectColorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/marc_pro"
            android:text="Select color and capacity"
            android:textColor="@color/second"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/featuresLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/colorFirst"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_color_first"
            android:src="@drawable/health_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectColorText">

            <ImageView
                android:id="@+id/imageViewFirstColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:scaleType="center"
                android:src="@drawable/check" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/colorSecond"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_color_second"
            android:src="@drawable/health_icon"
            app:layout_constraintStart_toEndOf="@id/colorFirst"
            app:layout_constraintTop_toBottomOf="@id/selectColorText">

            <ImageView
                android:id="@+id/imageViewSecondColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:scaleType="center"
                android:src="@drawable/check"
                android:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/button128"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/rounded_done_button"
            android:fontFamily="@font/marc_pro"
            android:padding="12dp"
            android:text="@string/_128_gb"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/button256"
            app:layout_constraintTop_toBottomOf="@id/selectColorText" />

        <TextView
            android:id="@+id/button256"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:background="@color/white"
            android:fontFamily="@font/marc_pro"
            android:padding="12dp"
            android:text="@string/_256_gb"
            android:textColor="@color/second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectColorText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonAddToCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:padding="12dp"
            android:background="@drawable/rounded_done_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button128">

            <TextView
                android:id="@+id/textAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/marc_pro"
                android:layout_marginHorizontal="12dp"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/marc_pro"
                android:layout_marginHorizontal="12dp"
                android:text="@string/_1_500_00"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>